--- a/2-POS_Tagging-and-Dialogue_Act_Recognition/POS_Tagging-and-Dialogue_Act_Recognition.ipynb
+++ b/2-POS_Tagging-and-Dialogue_Act_Recognition/POS_Tagging-and-Dialogue_Act_Recognition.ipynb
@@ -364,7 +364,7 @@
    "source": [
     "training_data= []\n",
     "act_tags = {'fp': 'Greet', 'fc': 'Goodbye', 'qy' : 'Request', 'qw' : 'Request', 'qo' : 'Request', 'qr' : 'Request', 'qrr': 'Request'}#greeting, goodby, and request\n",
-    "corpusReader = csv.reader(open('./swda/combined.csv', newline=''), delimiter =',')\n",
+    "corpusReader = csv.reader(open('./combined.csv', newline=''), delimiter =',')\n",
     "for row in corpusReader:\n",
     "    if row[1] in act_tags:\n",
     "        training_data.append({'class': act_tags[row[1]], 'sentence': row[2]})"
@@ -475,7 +475,7 @@
     "model.add(Dropout(0.2))\n",
     "model.add(Dense(units=256, activation='relu', kernel_regularizer=l2(0.03)))\n",
     "model.add(Dense(units=labels.shape[1], activation='softmax'))\n",
-    "https://techblog.cdiscount.com/part-speech-tagging-tutorial-keras-deep-learning-library/\n",
+    "\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "history = model.fit(dataset, labels, validation_split=0.2, epochs=5, batch_size=32, verbose=1)"
    ]
